# cefpanda

./: .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  cefpanda.py  setup.cfg  setup.py
cefpanda/: __init__.py
examples/call_py_from_js/: main.html  main.py
examples/frame_rate_check/: main.py
examples/hello_world/: main.py
examples/hello_world/ui/: main.html
examples/mouse_pos/: main.py
examples/mouse_pos/ui/: main.html
examples/rpg-menu/: credits.txt  main.py
examples/rpg-menu/ui/: bg.webm  main.html  style.css
