[metadata]
name = cefpanda
author = Mitchell Stokes
home-page = https://github.com/Moguri/cefpanda
description = A Panda3D-friendly wrapper around cefpython
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[global]
verbose = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint
